<resources>
    <string name="app_name">Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_problem">No Internet Connection</string>
    <string name="fill_data">Please fill in the information to login :</string>
    <string name="phone">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="services">Services</string>
    <string name="category">Category</string>
    <string name="details">Details</string>
    <string name="SAR">SAR</string>
    <string name="reservation">New Reservation</string>
    <string name="join_waiting_list">Waiting List</string>
    <string name="reservation_date_time">Reservation Date And Time</string>
    <string name="people_number">People Number</string>
    <string name="notes">Notes</string>
    <string name="submit_request">Submit Request</string>
    <string name="fill_data_reservation">Please fill in the information to complete your reservation :</string>
    <string name="there">There\'s</string>
    <string name="guest_waiting">Guest wating</string>
    <string name="no_category">No Category Selected</string>
    <string name="cancel">Cancel</string>
    <string name="require_field">Required Field</string>
    <string name="phone_not_correct">Phone Pattern Not Correct</string>
    <string name="is_weak">Is Weak</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="confirm">Confirm</string>
    <string name="reservation_success">Reservation Success</string>
    <string name="waiting_list">Waiting List</string>
    <string name="subcategory">Subcategory</string>
    <string name="products">Products</string>
    <string name="my_reservation">My Reservation</string>
    <string name="profile">Profile</string>
    <string name="are_you_sure">Are You Sure To Order This Service</string>
    <string name="remove_from_waiting_list">Remove From Waiting List</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="reviews">Reviews</string>
    <string name="address">Address</string>
    <string name="get_direction">Get Direction</string>
    <string name="no_address_detected">No Address Detected</string>
    <string name="contact_restaurant">Contact With Restaurant</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="send_success">Send Successfully</string>
    <string name="rate_and_comment">Comment And Rates</string>
    <string name="add_comment"><u>Add Comment</u>></string>
    <string name="current_order">Current Order</string>
    <string name="status">Status</string>
    <string name="waiter_name">Waiter Name</string>
    <string name="status_assigned">Assigned</string>
    <string name="service">Service</string>
    <string name="edit">Edit</string>
    <string name="contact">Contact Us</string>
    <string name="AR">AR</string>
    <string name="Eng">EN</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="join_us">Join Us</string>
    <string name="status_pending">Pending</string>
    <string name="no_waiter">No Waiter Detected</string>
</resources>