<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.elkrnshawy.restaurant_qr_user.ui.sharedPackage.utilesPackage.helpers.DataBindingUtilKt"/>
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.featuresPackage.languagePackage.LanguageFragment">

        <include layout="@layout/layout_background"/>

        <include layout="@layout/bar_fragment"
            android:id="@+id/toolbar"/>

        <androidx.cardview.widget.CardView
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/select_your_language"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txtArabic"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/AR"
                    android:gravity="center"
                    android:background="@{DataBindingUtilKt.arabicBackground(context)}"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"/>

                <TextView
                    android:id="@+id/txtEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/Eng"
                    android:gravity="center"
                    android:background="@{DataBindingUtilKt.englishBackground(context)}"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>