<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="15dp"
    android:layout_margin="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/edtComment"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/shape_edt"
            android:hint="@string/message"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:gravity="top"/>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:progress="1"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/barRating"/>

        <LinearLayout
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:textSize="16sp"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>