<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.featuresPackage.contactPackage.ContactFragment">

        <include layout="@layout/layout_background"/>

        <include layout="@layout/bar_fragment"
            android:id="@+id/toolbar"/>

        <ScrollView
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_logo"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_below="@+id/imgLogo"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/contact_restaurant"
                        android:textColor="@color/colorPrimary" />



                    <EditText
                        android:id="@+id/edtUsername"
                        android:inputType="text"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:background="@drawable/shape_edt"
                        android:hint="@string/username"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"/>


                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:background="@drawable/shape_edt"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"/>


                    <!--<EditText
                        android:id="@+id/edtMail"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:background="@drawable/shape_edt"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"/>-->


                    <EditText
                        android:id="@+id/edtMessage"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:background="@drawable/shape_edt"
                        android:hint="@string/message"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:gravity="top"/>


                    <Button
                        android:id="@+id/btnSend"
                        android:background="@drawable/shape_edt"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/send"
                        android:textSize="14sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"/>


                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</layout>